<resources>
    <string name="app_name">Sports Club Management App</string>
    <string name="guest_screen_title">Ready to push\n your limits?</string>
    <string name="login_txt">LOG IN</string>
    <string name="register_txt">Register</string>
    <string name="sports_club">SPORTS CLUB</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"WELCOME"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_to_your_account">Login To Your \nAccount</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="first_and_last_name">First And Last Name</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="join_your_first_club">Join your first club</string>
    <string name="home">Home</string>
    <string name="clubs">Clubs</string>
    <string name="events">Events</string>
    <string name="workouts">Workouts</string>
    <string name="new_here">New here?</string>
    <string name="email_example">your_name@domain.ro</string>
    <string name="password_example">at least 8 characters</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="account_setup">Account Setup</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="age">Age</string>
    <string name="continue_text">continue</string>

    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="calendar">Calendar</string>
    <string name="log_out">Log out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="username">Username</string>
    <string name="join_txt">JOIN</string>
    <string name="join_your_first_event">Join your first event</string>
    <string name="club_name_unknown">Club name unknown</string>
    <string name="future_events">Future events</string>

    <string name="save_changes">save changes</string>
    <string name="jorge_watson">Jorge Watson</string>

    <string name="default_day">00</string>
    <string name="default_month">month</string>
    <string name="default_day_name">Day</string>
    <string name="line_separator">-----</string>
    <string name="default_year">xxxx</string>
    <string name="distance_txt">distance</string>
    <string name="hashtag_3">###</string>
    <string name="km_txt">KM</string>
    <string name="time_txt">time</string>
    <string name="min_txt_caps">MIN</string>
    <string name="calories_txt">calories</string>
    <string name="bpm_txt_caps">BPM</string>
    <string name="workouts_txt">Workouts</string>

    <string name="today_s_workout">Today\'s Workout</string>
    <string name="workouts_history">Workouts history</string>
    <string name="add_workout">Add Workout</string>
    <string name="duration">Duration</string>
    <string name="workout_duration">Workout Duration</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="calories">Calories</string>
    <string name="av_speed">Av. Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="distance">Distance</string>
    <string name="save">Save</string>
    <string name="add_photo">Add Photo</string>
    <string name="past_events">Past Events</string>
    <string name="event_logo">Event Logo</string>
    <string name="date_event">Date event</string>
    <string name="title_event">Title Event</string>
    <string name="location_icon">location icon</string>
    <string name="date_icon">date icon</string>
    <string name="pending_events">Pending Events</string>
    <string name="joined_events">Joined Events</string>

    <string name="new_clubs_txt">New Clubs</string>
    <string name="joined_txt">JOINED</string>
    <string name="pending_txt_caps">PENDING</string>
    <string name="pending_clubs_txt">Pending Clubs</string>
    <string name="joined_clubs_txt">Joined Clubs</string>
    <string name="default_coach_name">Coach name</string>
    <string name="default_role_txt">Role</string>
    <string name="bullet_txt">•</string>
    <string name="years_txt_caps">YEARS</string>
    <string name="owned_clubs_txt_caps">OWNED CLUBS</string>
    <string name="clubs_txt">Clubs</string>
    <string name="members_txt">Members</string>
    <string name="events_txt">Events</string>
    <string name="club_name_txt">Club name</string>
    <string name="running_for_life">Running for Life</string>
    <string name="joined">Joined</string>
    <string name="location_event">Location event</string>
    <string name="time_event">Time Event</string>
    <string name="description1">description1</string>
    <string name="description2">description2</string>
    <string name="location">Location</string>
    <string name="select_participants_you_want_to_compare">Select participants you want to compare</string>
    <string name="share_event">Share Event</string>
    <string name="location_txt">Location</string>
    <string name="participants">Participants</string>


    <string name="MY_PREFS_NAME">MyPrefsFile</string>
    <string name="user_token">user_token</string>
    <string name="graphics_txt">Graphics</string>
    <string name="chart_select_to_compare_txt">Select metrics you want to be compared</string>
    <string name="heart_rate_txt">Heart Rate</string>
    <string name="calories_txt1">Calories</string>
    <string name="avg_speed_txt">Avg. Speed</string>
    <string name="splashlogo">Splash Logo</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="event_icon">Event Icon</string>
    <string name="time_icon">Time Icon</string>
    <string name="event_image">Event Image</string>
    <string name="bike_icon">Bike Icon</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="calories_icon">Calories Icon</string>
    <string name="bpm_icon">BPM Icon</string>
    <string name="log_in_not_successful">Your email or password is incorrect! If you don\'t have an account then create one!</string>
    <string name="log_in_successful">Log in is successful!</string>
    <string name="api_failure">Error failure: </string>
    <string name="register_not_successful">User already exists! Please log in or choose a new email.</string>
    <string name="register_successful">Set up your account, to create your user!</string>
    <string name="account_setup_not_successful">Data is not valid!</string>
    <string name="account_setup_successful">User has been created!</string>
    <string name="api_response_not_successful">Error response: </string>
    <string name="event">Event</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="workout_effectiveness">Workout Effectiveness</string>
    <string name="save_workout">Workout has been saved successfully!</string>
    <string name="api_my_profile_changes">Changes has been updated!</string>
    <string name="event_id">EVENT_ID</string>
    <string name="select_your_favorite_sport">Select your favorite sport:</string>
    <string name="log_out_successful">Log out successful!</string>
    <string name="name_intent">name</string>
    <string name="email_intent">email</string>
    <string name="password_intent">password</string>
    <string name="no_token_prefs">no token</string>
    <string name="club_joined_successfully"> successfully joined! Your coach will approve your application.</string>
    <string name="event_joined_successfully"> successfully joined! Your coach will approve your application.</string>
    <string name="join_event_to_add_workout">Join an event to add workout</string>
    <string name="participants_chart">Participants (</string>
    <string name="event_status">EVENT_STATUS</string>
    <string name="event_unjoined">Event successfully unjoined!</string>
    <string name="event_joined">Event successfully joined!</string>
    <string name="forgot_password_description">We just need your registered email to send you password reset instruction.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="back">BACK</string>
    <string name="forgot_password_sended">Check your email address to reset your password.</string>
    <string name="no_members">No members</string>
    <string name="no_events">No events</string>
    <string name="no_clubs">No clubs</string>
    <string name="no_workouts">No workouts</string>
    <string name="email_not_exists">This email doesn\'t exist.</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="coach">COACH</string>
    <string name="no_new_clubs">No new clubs</string>
    <string name="no_joined_clubs">No joined clubs</string>
    <string name="no_pending_clubs">No pending clubs</string>
    <string name="no_past_events">No past events</string>
    <string name="no_pending_events">No pending events</string>
    <string name="no_joined_events">No joined events</string>
</resources>