<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.eventdetails.EventDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/eventDetailsActivityToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/events">
        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="@dimen/margin_56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none"
        android:paddingHorizontal="@dimen/space_24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/space_24dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/eventTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/running_for_life"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/eventStatusButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_rounded_8dp_light_gray"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/joined"
                        android:onClick="changeEventStatus"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_events"
                    android:layout_marginEnd="@dimen/space_4dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/event_icon" />

                <TextView
                    android:id="@+id/dateEventTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/date_event"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dim_14sp"
                    android:layout_gravity="center"/>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:src="@drawable/ic_time"
                    android:layout_marginEnd="@dimen/dim_4dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/time_icon" />

                <TextView
                    android:id="@+id/timeEventTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/time_event"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dim_14sp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    android:layout_marginEnd="@dimen/dim_4dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/location_icon" />

                <TextView
                    android:id="@+id/eventLocationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/location_event"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dim_14sp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="@dimen/space_200dp"
                android:elevation="-10dp"
                android:layout_marginTop="@dimen/space_16dp"
                android:contentDescription="@string/event_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/space_16dp">

                <TextView
                    android:id="@+id/eventDescription1TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description1"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="@dimen/text_18sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/eventDescription2TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description2"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/gray6"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_txt"
                android:textSize="@dimen/dim_24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_regular"/>

            <androidx.fragment.app.FragmentContainerView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

            <TextView
                android:id="@+id/eventParticipantsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/participants"
                android:textSize="@dimen/text_24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="@dimen/space_32dp"
                android:layout_marginBottom="@dimen/space_16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/members_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graphics_txt"
                android:textSize="@dimen/dim_24sp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/space_16dp"/>

            <TextView
                android:id="@+id/chartDataSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_14sp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/space_24dp"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="300dp">

            </com.github.mikephil.charting.charts.BarChart>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/participants"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/space_8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chart_select_to_compare_txt"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/gray"
                android:layout_marginTop="@dimen/space_16dp"
                android:layout_marginBottom="@dimen/space_12dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <CheckBox
                        android:id="@+id/heart_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heart_rate_txt"
                        android:textSize="@dimen/text_18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/inter_medium"/>

                    <View
                        android:layout_width="@dimen/space_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <CheckBox
                        android:id="@+id/calories"
                        android:text="@string/calories_txt1"
                        android:textSize="@dimen/text_18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/inter_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="@dimen/space_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow>

                    <CheckBox
                        android:id="@+id/speed"
                        android:text="@string/avg_speed_txt"
                        android:textSize="@dimen/text_18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/inter_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="@dimen/space_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <CheckBox
                        android:id="@+id/distance"
                        android:text="@string/distance"
                        android:textSize="@dimen/text_18sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/inter_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_width="@dimen/space_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/shareEventButton"
                android:onClick="shareEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_42dp"
                android:text="@string/share_event"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/text_12sp"
                android:background="@drawable/btn_rounded_8dp_black"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/addWorkoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/add_workout"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/text_12sp"
                android:background="@drawable/btn_rounded_8dp_light_gray"
                android:textColor="@color/colorPrimary"
                android:onClick="goToAddWorkoutScreen"
                android:layout_marginBottom="@dimen/space_64dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>