<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.LoginActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_42dp"
        android:layout_marginEnd="@dimen/space_0dp"
        android:layout_marginTop="52dp"

        android:fontFamily="@font/inter_regular"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/text_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_to_your_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/login_to_your_account"
        android:textColor="@color/black"
        android:textSize="@dimen/text_36sp"
        android:layout_marginStart="@dimen/space_42dp"
        android:layout_marginEnd="@dimen/space_0dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_132dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/email_address"
        android:textColor="@color/black"
        android:textSize="@dimen/text_14sp"
        android:layout_marginStart="@dimen/space_42dp"
        android:layout_marginEnd="@dimen/space_0dp"

        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_to_your_account" />

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/email_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:background="@drawable/border_radius_login"
    app:layout_constraintTop_toBottomOf="@+id/email_address"
    android:layout_marginTop="@dimen/space_6dp"
    android:layout_marginLeft="@dimen/space_42dp"
    android:layout_marginRight="@dimen/space_42dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_example"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toTopOf="@id/email_address"
        android:background="@android:color/transparent"
        android:layout_marginStart="@dimen/space_14dp"
        android:layout_marginEnd="@dimen/space_14dp"/>
        </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16dp"
        app:layout_goneMarginStart="@dimen/margin_42dp"
        android:layout_marginEnd="@dimen/space_0dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_14sp"
        android:layout_marginStart="@dimen/space_42dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_txt"
        android:layout_marginTop="@dimen/space_6dp"
        android:layout_marginLeft="@dimen/space_42dp"
        android:layout_marginRight="@dimen/space_42dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="@dimen/space_14dp"
            android:layout_marginEnd="@dimen/space_14dp"
            android:background="@android:color/transparent"
            android:hint="@string/password_example"
            app:layout_constraintTop_toTopOf="@id/email_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginEnd="@dimen/space_42dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/gray3"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius_black_button"
        android:text="@string/login_txt"
        android:textColor="@color/cyan"
        android:textSize="@dimen/text_12sp"
        android:textStyle="bold"

        android:layout_marginTop="@dimen/space_49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        android:layout_marginStart="@dimen/margin_42dp"
        android:layout_marginEnd="@dimen/margin_42dp"
        />

    <LinearLayout
        android:id="@+id/new_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickNewHere"
        android:clickable="true"
        android:layout_marginStart="@dimen/margin_42dp"
        android:layout_marginEnd="@dimen/margin_42dp"
        android:layout_marginTop="@dimen/space_98dp"
        app:layout_constraintVertical_bias="0"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/new_here"
            android:textAlignment="center"
            android:textColor="@color/gray3"
            android:textSize="@dimen/text_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/register_txt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>